--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.1.0",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.3",
     "moment-timezone": "^0.5.34",
     "nanoid": "^4.0.2",
