--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment-timezone": "^0.5.34",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.10.1",
     "react-moment": "^1.1.2",
